--- a/mp3/folder/css/mp3.css
+++ b/mp3/folder/css/mp3.css
@@ -10,7 +10,8 @@
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: #333;
+  /* background-color: rgba(255, 255, 255, 0.8 ); */
 }
 
 html {
@@ -22,6 +23,8 @@ html {
   position: relative;
   max-width: 480px;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 .player .icon-pause {
@@ -54,12 +57,12 @@ header {
 
 header h4 {
   color: var(--primary-color);
-  font-size: 12px;
+  font-size: 14px;
 }
 
 header h2 {
-  color: var(--text-color);
-  font-size: 20px;
+  color: lightgoldenrodyellow;
+  font-size: 24px;
 }
 
 /* CD */
@@ -73,8 +76,10 @@ header h2 {
   width: 100%;
   padding-top: 100%;
   border-radius: 50%;
-  background-color: #333;
+  /* background-color: #333; */
   background-size: cover;
+  background-image: initial;
+  background-position: center;
   margin: auto;
 }
 
@@ -87,7 +92,7 @@ header h2 {
 }
 
 .control .btn {
-  color: #666;
+  color: antiquewhite;
   padding: 18px;
   font-size: 18px;
   cursor: pointer;
@@ -190,4 +195,47 @@ header h2 {
 
 .palyer.active {
   color: var(--primary-color);
+}
+
+.cover {
+  /* margin-left: 15px; */
+  /* z-index: -1; */
+  background-image: inherit;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 1;
+  width: 425px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+@media (max-width : 739px) {
+  .progress {
+    width: 360px;
+    margin-left: 15px;
+  }
+}
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 5px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--primary-color); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-color); 
 }
