--- a/mp3/nodemy__30days/css/dribbble.css
+++ b/mp3/nodemy__30days/css/dribbble.css
@@ -495,3 +495,12 @@ body {
     color: var(--primary-color);
     font-size: 24px ;
 }
+
+.ok {
+    display: flex;
+    align-items: center;
+}
+
+.ok i {
+    margin-right: 10px;
+}
